Added left tree and navbar (dummy)

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,55 +1,130 @@
 <html>
-    <head>
-        <link href="/webjars/bootstrap/3.3.1/css/bootstrap.min.css/" rel="stylesheet">
-        <link href="/webjars/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="/app/touchsplitter/touchsplitter.css" rel="stylesheet">
-        <style>
-            html,body {
-            width:100%;
-            height:100%;
-            }
-            body { margin:0; }
-            .split-me>div{
-            background: #444;
-            }
-            .split-me>div:first-child{
-            background: #555;
-            }
-            .split-me>div:last-child{
-            background: #666;
-            }
+<head>
+    <link href="/webjars/bootstrap/3.3.1/css/bootstrap.min.css/" rel="stylesheet">
+    <link href="/webjars/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/app/touchsplitter/touchsplitter.css" rel="stylesheet">
+    <link href="/app/treeview/bootstrap-treeview.min.css" rel="stylesheet">
+    <style>
+        html,body {
+        width:100%;
+        height:100%;
+        }
+        body { margin:0; }
+        .split-me>div{
+        background: #444;
+        }
+        .split-me>div:first-child{
+        background: #555;
+        }
+        .split-me>div:last-child{
+        background: #666;
+        }
 
-            .split-me-container {
-            position: absolute;
-            top: 0em;
-            left: 0em;
-            right: 0em;
-            bottom: 0em;
+        .split-me-container {
+        position: absolute;
+        top: 0em;
+        left: 0em;
+        right: 0em;
+        bottom: 0em;
 
-            overflow: hidden;
-            }
+        overflow: hidden;
+        }
 
-            .splitter-bar {
-            background: #333;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="split-me-container">
-            <div class="split-me-vertically">
-                <div> Left Side </div>
-                <div class="split-me-horizontally">
-                    <div> Top Side </div>
-                    <div> Bottom Side </div>
-                </div>
+        .splitter-bar {
+        background: #333;
+        }
+    </style>
+</head>
+<body>
+
+<!-- Static navbar -->
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">SQLXPLR</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Connections</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li class="dropdown-header">Nav header</li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
+
+<div class="container">
+    <div class="split-me-container">
+        <div class="split-me-vertically">
+            <div id="tree"></div>
+            <div class="split-me-horizontally">
+                <div> Top Side</div>
+                <div> Bottom Side</div>
             </div>
         </div>
-        <script src="/webjars/jquery/2.1.4/jquery.min.js"></script>
-        <script src="/webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <script src="/app/touchsplitter/jquery.touchsplitter.js"></script>
-        <script>
+    </div>
+</div>
+<script src="/webjars/jquery/2.1.4/jquery.min.js"></script>
+<script src="/webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="/app/touchsplitter/jquery.touchsplitter.js"></script>
+<script src="/app/treeview/bootstrap-treeview.min.js"></script>
+<script>
+            console.log('Start splitting the screen');
             $('.split-me-vertically').touchSplit({leftMin:200, rightMin:300, thickness: "5px", dock:"left"})
 		    $('.split-me-horizontally').touchSplit({thickness: "5px", orientation:"vertical", dock: "top"})
-        </script>
-    </body>
+		    $('#tree').treeview({data: [
+  {
+    text: "Parent 1",
+    nodes: [
+      {
+        text: "Child 1",
+        nodes: [
+          {
+            text: "Grandchild 1"
+          },
+          {
+            text: "Grandchild 2"
+          }
+        ]
+      },
+      {
+        text: "Child 2"
+      }
+    ]
+  },
+  {
+    text: "Parent 2"
+  },
+  {
+    text: "Parent 3"
+  },
+  {
+    text: "Parent 4"
+  },
+  {
+    text: "Parent 5"
+  }
+]});
+
+
+</script>
+</body>
 </html>
