--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -33,6 +33,17 @@
         .splitter-bar {
         background: #333;
         }
+
+
+        #textbox
+        {
+
+        width:100%;
+        height:100%;
+        box-sizing: border-box;         /* For IE and modern versions of Chrome */
+        -moz-box-sizing: border-box;    /* For Firefox                          */
+        -webkit-box-sizing: border-box; /* For Safari                           */
+        }
     </style>
 </head>
 <body>
@@ -47,7 +58,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">SQLXPLR</a>
+            <a class="navbar-brand">SQLXPLR</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -76,8 +87,8 @@
         <div class="split-me-vertically">
             <div id="tree"></div>
             <div class="split-me-horizontally">
-                <div> Top Side</div>
-                <div> Bottom Side</div>
+                <div style="background-color: #b0c4de;"><textarea id="textbox"></textarea></div>
+                <div style="background-color: #00ff00;"> Bottom Side</div>
             </div>
         </div>
     </div>
