--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-    <link href="/webjars/bootstrap/3.3.1/css/bootstrap.min.css/" rel="stylesheet">
-    <link href="/webjars/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/webjars/bootstrap/css/bootstrap.min.css/" rel="stylesheet">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="/webjars/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/app/treeview/bootstrap-treeview.min.css" rel="stylesheet">
     <style>
 
@@ -94,8 +95,9 @@
         </div>
     </div>
 </div>
-<script src="/webjars/jquery/2.1.4/jquery.min.js"></script>
-<script src="/webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="/webjars/jquery/jquery.min.js"></script>
+<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
 <script src="/app/treeview/bootstrap-treeview.min.js"></script>
 <script>
            var tree = [];
